--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "mongoose": "^8.0.3",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
+    "next-nprogress-bar": "^2.1.2",
     "next-themes": "^0.2.1",
+    "nextjs-progressbar": "^0.0.16",
     "nextjs-toploader": "^1.6.4",
     "react": "^18",
     "react-dom": "^18",
